<resources>
    <string name="app_name">CodeBuildersApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="new_file_string">New File</string>
    <string name="code">Code:</string>
    <string name="html">HTML</string>
    <string name="paragraph_action_string"><![CDATA[<p>]]></string>
    <string name="body_action_string"><![CDATA[<body>]]></string>
    <string name="head"><![CDATA[<head>]]></string>
    <string name="div"><![CDATA[<div>]]></string>
    <string name="hint">hint</string>
    <string name="head_opener"><![CDATA[<head>]]></string>
    <string name="head_end"><![CDATA[</head>]]></string>
    <string name="br"><![CDATA[<br>]]></string>
    <string name="buttonActionButton_text"><![CDATA[<button>]]></string>
    <string name="link">link</string>
    <string name="h1_actiontext"><![CDATA[<h1>]]></string>
    <string name="h2"><![CDATA[<h2>]]></string>
    <string name="h3"><![CDATA[<h3>]]></string>
    <string name="styleString"><![CDATA[<style>]]></string>
    <string name="boldString"><![CDATA[<b>]]></string>
    <string name="strikerString"><![CDATA[<s>]]></string>
    <string name="quotationString"><![CDATA[<q>]]></string>
    <string name="scriptString"><![CDATA[<script>]]></string>
    <string name="table"><![CDATA[<table>]]></string>
    <string name="tableRowString"><![CDATA[<tr>]]></string>
    <string name="tableDetail"><![CDATA[<td>]]></string>
    <string name="tableFootString"><![CDATA[<tfoot>]]></string>
    <string name="listItemString"><![CDATA[<li>]]></string>
    <string name="orderedListItem"><![CDATA[<ol>]]></string>
    <string name="unorderedListItem"><![CDATA[<ul>]]></string>
    <string name="formActionString"><![CDATA[<form>]]></string>
    <string name="headerActionString"><![CDATA[<header>]]></string>
    <string name="mainActionString"><![CDATA[<main>]]></string>
    <string name="footerActionString"><![CDATA[<footer>]]></string>
    <string name="h4"><![CDATA[<h4>]]></string>
    <string name="h5"><![CDATA[<h5>]]></string>
    <string name="h6"><![CDATA[<h6>]]></string>
    <string name="enter_code_here">Enter Code Here...</string>
    <string name="submit">Submit</string>
    <string name="save">Save</string>
    <string name="add_elements_string">Tap to add elements below to the code above</string>
    <string name="aside"><![CDATA[<aside>]]></string>
    <string name="input"><![CDATA[<input>]]></string>
    <string name="label"><![CDATA[<label>]]></string>
    <string name="home">home</string>
    <string name="menu">menu</string>
    <string name="project_name">Project Name</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="file_type">File type</string>
    <string name="web_link">web link</string>
    <string-array name="documentType">
        <item>html</item>
        <item>css</item>
        <item>js</item>
    </string-array>
</resources>